Allow user to add plausible domain and source for analyitics with Plausible analytics
Signed-off-by: ymarselino <m11202819@gapps.ntust.edu.tw>

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -13,6 +13,10 @@
     <meta name="description" content="{description}" />
     <meta name="darkreader-lock" />
     {noindex}
+
+    <!-- Plausible Injection -->
+    {plausible-script}
+
     <link rel="manifest" href="{manifest-url}" />
     <link rel="canonical" href="{canonical-url}" data-react-helmet="true" />
     {prefetch}
