fix: Sitemap not included on root shares

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -15,7 +15,7 @@
     {noindex}
     <link rel="manifest" href="{manifest-url}" />
     <link rel="canonical" href="{canonical-url}" data-react-helmet="true" />
-    {prefetch}
+    {metatags}
     <link
       rel="shortcut icon"
       type="image/png"
